--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "myzero1/yii2-captcha",
-    "description": "Upload for yii2 app",
+    "description": "Simple captcha for yii2 app",
     "type": "yii2-module",
-    "license": "BSD-3-Clause",
+    "license": "MIT ",
     "authors": [
         {
             "name": "Xuanwu Qin",
@@ -11,11 +11,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "trntv/yii2-file-kit": "^1.0.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "~4.5.0",
-        "creocoder/yii2-flysystem": "~0.8"
+        "yiisoft/yii2": "~2.0"
     },
     "autoload": {
         "psr-4": { "myzero1\\captcha\\": "src/" }
