--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "yiisoft/yii2": "~2.0"
+        "yiisoft/yii2": "~2.0",
+        "gregwar/captcha": "1.*"
     },
     "autoload": {
         "psr-4": { "myzero1\\captcha\\": "src/" }
