--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "yiisoft/yii2": "~2.0",
-        "gregwar/captcha": "1.*"
+        "yiisoft/yii2": "~2.0"
     },
     "autoload": {
         "psr-4": { "myzero1\\captcha\\": "src/" }
